Set up forgot password endpoint

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -27,9 +27,7 @@
       const newPassword = passwordInput.value;
 
       // MAKE API REQUEST
-      fetch('http://localhost:8000/api/auth/reset-password');
-
-      console.log('Done.');
+      fetch('http://localhost:8000/api/');
     }
   </script>
 </html>
