--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -22,12 +22,30 @@
 
   <script>
     async function submit() {
+      // get new password from input field
       const passwordInput = document.getElementById('password');
-
       const newPassword = passwordInput.value;
 
-      // MAKE API REQUEST
-      fetch('http://localhost:8000/api/');
+      // get token from query string
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get('token');
+
+      // make API request
+      const response = await fetch(`https://hoodat-api.herokuapp.com/api/auth/reset-password`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': `Bearer ${token}`
+        },
+        body: JSON.stringify({ password: newPassword })
+      });
+
+      if (!response.ok) {
+        alert('Unable to reset password.');
+        return;
+      }
+
+      alert('Successfully reset password.');
     }
   </script>
 </html>
