--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -4,48 +4,77 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reset Password | Hoodat</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
-    <h1>Reset password</h1>
-    <label for="password">New password:</label>
-    <br />
-    <input
-      type="password"
-      id="password"
-      name="password"
-      placeholder="********"
-    />
-    <br />
-    <button onclick="submit()">Submit</button>
-  </body>
+    <div class="container mt-4">
+      <div id="alert" class="alert" role="alert"></div>
+      <h1 class="mb-3">Reset password</h1>
+      <div class="form-group mb-2">
+        <label for="password">New password:</label>
+        <input
+          type="password"
+          id="password"
+          class="form-control"
+          name="password"
+          placeholder="********"
+        />
+        <small class="form-text text-muted"
+          >Password must be at least 8 characters in length.</small
+        >
+      </div>
+      <button type="button" class="btn btn-primary" onclick="submit()">
+        Submit
+      </button>
+    </div>
 
-  <script>
-    async function submit() {
-      // get new password from input field
-      const passwordInput = document.getElementById('password');
-      const newPassword = passwordInput.value;
+    <script>
+      async function submit() {
+        const alert = document.getElementById('alert');
 
-      // get token from query string
-      const params = new URLSearchParams(window.location.search);
-      const token = params.get('token');
+        const passwordInput = document.getElementById('password');
+        const newPassword = passwordInput.value;
+        passwordInput.value = '';
 
-      // make API request
-      const response = await fetch(`https://hoodat-api.herokuapp.com/api/auth/reset-password`, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': `Bearer ${token}`
-        },
-        body: JSON.stringify({ password: newPassword })
-      });
+        const params = new URLSearchParams(window.location.search);
+        const token = params.get('token');
 
-      if (!response.ok) {
-        alert('Unable to reset password.');
-        return;
+        try {
+          await resetPassword(newPassword, token);
+        } catch (err) {
+          alert.className = 'alert alert-danger';
+          alert.innerHTML = 'Unable to reset password';
+          return;
+        }
+
+        alert.className = 'alert alert-success';
+        alert.innerHTML = 'Successfully reset password.';
       }
 
-      alert('Successfully reset password.');
-    }
-  </script>
+      async function resetPassword(password, token) {
+        const response = await fetch(
+          `https://hoodat-api.herokuapp.com/api/auth/reset-password`,
+          {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+              Authorization: `Bearer ${token}`,
+            },
+            body: JSON.stringify({ password }),
+          }
+        );
+
+        if (!response.ok) {
+          throw new Error();
+        }
+      }
+    </script>
+  </body>
 </html>
