Add re-enter password and logo

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -14,10 +14,11 @@
   </head>
 
   <body>
-    <div class="container mt-4">
-      <div id="alert" class="alert" role="alert"></div>
+    <div class="container">
+      <img src="hoodat-logo.png" alt="Hoodat logo" width="100" class="mt-3 mb-3" />
+      <div id="alert" class="" role="alert"></div>
       <h1 class="mb-3">Reset password</h1>
-      <div class="form-group mb-2">
+      <div class="form-group">
         <label for="password">New password:</label>
         <input
           type="password"
@@ -29,6 +30,15 @@
         <small class="form-text text-muted"
           >Password must be at least 8 characters in length.</small
         >
+        <br />
+        <label for="reenterpassword" class="mt-3">Re-enter new password:</label>
+        <input
+          type="password"
+          id="reenterpassword"
+          class="form-control mb-3"
+          name="reenterpassword"
+          placeholder="********"
+        />
       </div>
       <button type="button" class="btn btn-primary" onclick="submit()">
         Submit
@@ -40,8 +50,18 @@
         const alert = document.getElementById('alert');
 
         const passwordInput = document.getElementById('password');
+        const reEnterPasswordInput = document.getElementById('reenterpassword');
         const newPassword = passwordInput.value;
+        const reEnterNewPassword = reEnterPasswordInput.value;
+
         passwordInput.value = '';
+        reEnterPasswordInput.value = '';
+
+        if (newPassword != reEnterNewPassword) {
+          alert.className = 'alert alert-danger';
+          alert.innerHTML = 'Passwords do not match';
+          return;
+        }
 
         const params = new URLSearchParams(window.location.search);
         const token = params.get('token');
